Mon Apr  4 13:02:59 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/xerces.mpb:

          Change libs to lit_libs to ensure that there are no library
          decorator issues (especially with static builds).

Mon Apr  4 12:27:14 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/TemplateParser.pm:

          Added a new template function, 'starts_with', that takes two
          parameters.  The first parameter is a template variable and the
          second is a literal string.  If the value of the template variable
          starts with the literal string, then starts_with evaluates to
          true.

Fri Apr  1 12:39:12 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/em3vcp.mpd:
        * templates/vc6dsp.mpd:

          Specify the /implib option to be consistent with the nmake and vc7
          templates.  This allows the user to control where it goes with the
          'libout;' setting.

Fri Apr  1 07:30:50 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:
        * modules/ProjectCreator.pm:
        * modules/TemplateParser.pm:

          For some project keywords, the project value will be appended to
          the template input variable of the same name (if there is one).
          See the "Project Variable and Template Input Variable Interaction"
          section of the README for more details.

        * templates/vc7.mpd:

          Only use 'link_options' if it's set.

Thu Mar 31 10:23:39 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          If -global is used and the file does not contain a path, we will
          search the include path for it.

Thu Mar 31 06:53:14 2005  Chad Elliott  <elliott_c@ociweb.com>

        * combine_dsw.pl:

          Added a new script to combine multiple dsw's into one.

        * modules/CBXProjectCreator.pm:

          Inherit from WinProjectBase to pick up the validated_directory
          method.
